Добавлена авторизация перед отправкой запросов. Исправлены ошибки в UserRepository. К аспектам добавлен вывод вермени работы контроллера. Исправлен openapi.
